# poly

./: .dockerignore  .gitattributes  .gitignore  .woodpecker.yml  Cargo.toml  Dockerfile  LICENSE  README.md  config.example.toml  config.toml  cublas.Dockerfile  rustfmt.toml  test.bat  test.ps1
.github/workflows/: rust.yml
client/: README.md  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.vue  style.css
client/src/components/: Chat.vue  Embedding.vue  Memory.vue  Task.vue  Tokenization.vue
data/: cars.schema.json  qdrant.yaml  recipe.schema.json
docs/: HOWTO.md
llm-bias/: Cargo.toml  README.md
llm-bias/src/: json.rs  lib.rs
llm-bias/tests/: biaser.rs
llm-ui/: Cargo.toml  README.md
llm-ui/data/: config.toml
llm-ui/src/: app.rs  main.rs  util.rs  worker.rs
llmd/: Cargo.toml  README.md
llmd/src/: api.rs  backend.rs  config.rs  lib.rs  middleware.rs  sequence.rs  stats.rs
poly-backend/: Cargo.toml  README.md
poly-backend/src/: backend.rs  config.rs  lib.rs  memory.rs  sequence.rs  session.rs  types.rs
poly-backend/src/memory/: hora.rs  mod.rs  qdrant.rs
poly-bias/: Cargo.toml  README.md
poly-bias/src/: json.rs  lib.rs  sampler.rs
poly-bias/tests/: biaser.rs
poly-extract/: Cargo.toml
poly-extract/src/: docx.rs  lib.rs  middleware.rs  pdf.rs
poly-server/: Cargo.toml  README.md  openapi.yaml
poly-server/src/: api.rs  config.rs  lib.rs  middleware.rs  server.rs
poly-server/src/routes/: memories.rs  mod.rs  models.rs  tasks.rs
poly-ui/: .gitignore  Cargo.toml  README.md  poly-ui.vectornator
poly-ui/data/: config.toml
poly-ui/src/: app.rs  main.rs  util.rs  worker.rs
poly-ui/src/components/: chatmessage.rs  mod.rs
public/: index.html
src/: api.rs  backend.rs  bias.rs  config.rs  lib.rs  main.rs
tests/: biaser.rs
