[package]
name = "llmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
axum = "0.6.18"
clap = { version = "4.3.0", features = ["derive"] }
env_logger = "0.10.0"
flume = "0.10.14"
futures-util = "0.3.28"
llm = { git = "https://github.com/rustformers/llm.git" }
log = "0.4.17"
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
toml = "0.7.4"
tower-http = { version = "0.4.0", features = ["fs", "cors"] }