
[workspace]
resolver= "2"
members = [
	"poly-extract",
	"poly-server",
	"poly-bias",
	"poly-ui",
	"poly-backend"
]

[workspace.dependencies]
llm = { git = "https://github.com/rustformers/llm.git", default-features = false, features = ["models"] }

[patch.crates-io]
poly-bias = { path = "./poly-bias" }
poly-backend = { path = "./poly-backend" }
poly-extract = { path = "./poly-extract" }
