[package]
name = "llm-bias"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llm = { git = "https://github.com/rustformers/llm.git" }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
tracing = "0.1.37"

[dev-dependencies]
tracing-test = "0.2.4"
rand = "0.8.5"