# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "llm-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
metal = ["llmd/metal"]

[dependencies]
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
iced = { version = "0.9.0", features = ["tokio"] }
llmd = "*"
once_cell = "1.18.0"
toml = "0.7.4"
tokio = { version = "1.28.1", features = ["full"] }