[package]
name = "poly-backend"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
default = []
metal = ["llm/metal"]
cublas = ["llm/cublas"]
qdrant = ["dep:qdrant-client"]

[dependencies]
async-stream = "0.3.5"
futures-util = "0.3.28"
llm = { workspace = true }
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
toml = "^0.8.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-test = "0.2.4"
poly-bias = "0.1.0"
async-trait = "0.1.71"
hora = "0.1.1"
qdrant-client = { version = "1.3.0", optional = true }
uuid = { version = "1.4.0", features = ["v5"] }
directories = "5.0.1"
reqwest = { version = "0.11.18", features = ["stream"] }
regex = "1.9.1"
