[package]
name = "poly-bias"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llm = { workspace = true }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
tracing = "0.1.37"
rand = "0.8.5"
partial_sort = "0.2.0"
anyhow = "1.0.75"

[dev-dependencies]
tracing-subscriber = "0.3.17"
