[package]
name = "poly-extract"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
default = []
axum = ["dep:axum", "dep:hyper", "dep:tokio"]

[dependencies]
minidom = "0.15.2"
zip = "0.6.6"
pdf-extract = "0.6.5"
axum = { version = "0.6.18", optional = true }
hyper = { version = "0.14.27", optional = true }
tokio = { version = "1.28.1", optional = true }
tracing = "0.1.37"
