# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "poly-server"
version = "0.1.0"
edition = "2021"
default-run = "llmd"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
metal = ["llm/metal"]
cublas = ["llm/cublas"]

[dependencies]
async-stream = "0.3.5"
axum = { version = "0.6.18", features = ["ws"] }
clap = { version = "4.3.0", features = ["derive"] }
futures-util = "0.3.28"
llm = { workspace = true }
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
toml = "0.7.4"
tower = { version = "0.4.13", features = ["limit", "tracing"] }
tower-http = { version = "0.4.0", features = ["fs", "cors", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-test = "0.2.4"
poly-bias = "0.1.0"
poly-backend = "0.1.0"
poly-extract = { version = "0.1.0", features = ["axum"] }
jsonwebtoken = "8.3.0"
